feat: Impl get all result of experiment
